# ChangeLog for app-text/acroread
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.44 2005/01/14 15:37:44 luckyduck Exp $

  14 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> acroread-5.10.ebuild:
  back to amd64 from of emul-linux-x86

  12 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> acroread-5.10.ebuild:
  migrated from amd64? to emul-linux-x86? dependency.

*acroread-5.10 (16 Dec 2004)

  16 Dec 2004; lanius@gentoo.org -acroread-5.010.ebuild,
  +acroread-5.10.ebuild:
  rename 5.010 to 5.10 because 5.010 < 5.09

  15 Dec 2004; lanius@gentoo.org -acroread-5.09-r1.ebuild,
  -acroread-5.09.ebuild:
  remove old versions

*acroread-5.010 (15 Dec 2004)

  15 Dec 2004; lanius@gentoo.org +acroread-5.010.ebuild:
  security bump, bug #74406

  25 Oct 2004; Mamoru KOMACHI <usata@gentoo.org> acroread-5.09-r1.ebuild,
  acroread-5.09.ebuild:
  Provide virtual/pdfviewer; bug #50423.

  23 Sep 2004; Michael Sterrett <mr_bones_@gentoo.org>
  acroread-5.09-r1.ebuild:
  fix use invocation; error check sed; tidy

*acroread-5.09-r1 (22 Sep 2004)

  22 Sep 2004; Heinrich Wendel <lanius@gentoo.org> +acroread-5.09-r1.ebuild:
  add browser plugin

  30 Aug 2004; Danny van Dyk <kugelfang@gentoo.org> acroread-5.09.ebuild:
  Fixed BUG #62110. Many thx to Evgeny Strambulchik.

  13 Aug 2004; <plasmaroo@gentoo.org> acroread-5.09.ebuild:
  Marking 5.09 stable since it was updated for a security issue. Bug #60205.

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> acroread-5.08.ebuild,
  acroread-5.09.ebuild:
  virtual/glibc -> virtual/libc

*acroread-5.09 (19 Jun 2004)

  19 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> acroread-5.09.ebuild:
  Version bumped. This closes bug #54162

  28 Apr 2004; Heinrich Wendel <lanius@gentoo.org> acroread-5.08.ebuild:
  revert that, it was wrong

  28 Apr 2004; Heinrich Wendel <lanius@gentoo.org> acroread-5.08.ebuild: