@@ -1,4 +1,6 @@
+MD5 8c148a790f4bcbdb06f8f72653081b08 acroread-7.0.ebuild 1730
 MD5 280de59e14d75551c2810de7b332058f acroread-5.10.ebuild 2365
-MD5 a0bbb2179ac17e73e28b0ff6b35fdd63 ChangeLog 7455
+MD5 12ff926b8015c941d355dc8404fe05c2 ChangeLog 7573
 MD5 26b4b081d538c195dc39bcb2ec8e6f3a metadata.xml 161
 MD5 d0981fc5a58874b78a6f2a2b73d3e43d files/digest-acroread-5.10 63
+MD5 c54a04836864a99a8792ef5817a968c1 files/digest-acroread-7.0 73
