@@ -1,0 +1,1 @@
+MD5 f847ce21e5d871837f2dc1d2f1baf9a9 AdbeRdr70_linux_enu.tar.gz 40104508
