@@ -1,6 +1,11 @@
 # ChangeLog for app-text/acroread
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.44 2005/01/14 15:37:44 luckyduck Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.45 2005/03/14 21:27:05 genstef Exp $
+
+*acroread-7.0 (14 Mar 2005)
+
+  14 Mar 2005; Stefan Schweizer <genstef@gentoo.org> +acroread-7.0.ebuild:
+  version bump
 
   14 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> acroread-5.10.ebuild:
   back to amd64 from of emul-linux-x86
